# crab

./: CMakeLists.txt  README.md  todo.txt
include/glad/: glad.h
lib/: freetype.lib
res/objs/: wedge.mtl
src/: camera.c  camera.h  common.h  glad.c  input.c  input.h  main.c  object.c  object.h  physics.c  physics.h  primitives.c  primitives.h  shader.c  shader.h  state.c  state.h  ui.c  ui.h
src/shaders/: frag_default.glsl  frag_font.glsl  frag_text.glsl  vert_default.glsl  vert_font.glsl
